<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/aboutTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/myYellow"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutSinopsis"
        android:id="@+id/textSinopsis"
        android:textColor="@color/myCian"
        android:layout_weight="0.20"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutPeople"
        android:id="@+id/textPeople"
        android:textColor="@color/myCian"
        android:layout_weight="0.20"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developers"
        android:id="@+id/textDev"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/myYellow"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp" />

</LinearLayout>