<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help"
        android:id="@+id/aboutTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/myYellow"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40dp" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/codeInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="@color/myCian"
                android:textSize="20dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/explain1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />
        </TableRow>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/scan"
                android:id="@+id/imageView4" />

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/explain2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />

        </TableRow>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textColor="@color/myYellow"
                android:textSize="20dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/explain3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />
        </TableRow>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textColor="@color/myYellow"
                android:textSize="20dp"
                android:textAlignment="center" />

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/explain4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />
            <TextView
                android:text="--->"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:allowUndo="false"
                android:textAlignment="center"
                android:textColor="@color/myYellow" />

            <TextView
                android:text="@string/explain5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />
        </TableRow>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/send"
                android:id="@+id/imageView6" />

            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/explain7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:textColor="@color/myCian"
                android:textSize="10dp"
                android:allowUndo="false" />
        </TableRow>
    </TableLayout>

</LinearLayout>