<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    android:background="@color/myBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView3" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/aboutTitle"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/myYellow"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="40dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutSinopsis"
            android:id="@+id/textSinopsis"
            android:textColor="@color/myCian"
            android:layout_weight="0.20"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutPeople"
            android:id="@+id/textPeople"
            android:textColor="@color/myCian"
            android:layout_weight="0.20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logotec"
            android:id="@+id/imageView6" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Contribuidores"
            android:id="@+id/textExHelp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/myYellow"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/externalhelp"
            android:id="@+id/texternalhelp"
            android:textColor="@color/myCian"
            android:layout_weight="0.20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/developers"
            android:id="@+id/textDev"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/myYellow"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TEC"
            android:id="@+id/textTEC"
            android:textColor="@color/myCian"
            android:layout_weight="0.20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/samanthaarburola"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Samantha Arburola\nEmail:samarburola@gmail.com"
                    android:id="@+id/textView3"
                    android:textStyle="italic"
                    android:textColor="@color/myCian" />
            </TableRow>
            <TableRow>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp" />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/amandasolano"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Amanda Solano\nEmail:assa2909@gmail.com"
                    android:id="@+id/textView4"
                    android:textStyle="italic"
                    android:textColor="@color/myCian"
                    android:layout_gravity="center_horizontal"
                    android:layout_column="1" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>